# TF_ROS_CUsalm

./: .gitignore  README.md
cuvslam_localization_adapter/: CMakeLists.txt  package.xml
cuvslam_localization_adapter/config/: contract_blocked.yaml  shadow.params.yaml
cuvslam_localization_adapter/include/cuvslam_localization_adapter/: adapter_node.hpp  contract_config.hpp
cuvslam_localization_adapter/launch/: cuvslam_adapter_shadow.launch.py
cuvslam_localization_adapter/src/: adapter_node.cpp  contract_config.cpp  main.cpp
cuvslam_localization_adapter/test/: test_contract_config.cpp  test_input_publisher_authority.cpp  test_live_source_candidate.cpp  test_shadow_node_contract.cpp
cuvslam_localization_adapter/test/fixtures/: approved_synthetic_contract.yaml  blocked_placeholder_contract.yaml  duplicate_key_contract.yaml
docs/yopo_integration/: ACCEPTANCE_CRITERIA.md  DECISION_LOG.md  DEPLOYMENT_ARCHITECTURE.md  GATE_G2_REPORT_20260723.md  INTERFACE_CONTRACTS.md  PROJECT_REQUIREMENTS.md  README.md  SAFETY_CONSTRAINTS.md  TASKFLOW.md  VERSION_MANIFEST.md  YP_200_MAVROS_PX4_EXTERNAL_VISION_AUDIT.md  YP_210_EXTRINSIC_CONTRACT_20260723.md  YP_220_SOURCE_SELECTOR_CONTRACT.md  YP_230_OUTPUT_GATEWAY_CONTRACT.md
localization_adapter_interfaces/: CMakeLists.txt  package.xml
localization_adapter_interfaces/msg/: LocalizationSourceCandidate.msg  SelectedPoseCandidate.msg  ShadowPoseCandidate.msg
localization_adapter_interfaces/test/: test_message_schema.py
localization_contracts/: CMakeLists.txt  package.xml
localization_contracts/include/localization_contracts/: errors.hpp  gate.hpp  rigid_transform.hpp  twist_contract.hpp  validation.hpp
localization_contracts/src/: gate.cpp  rigid_transform.cpp  twist_contract.cpp  validation.cpp
localization_contracts/test/: test_gate.cpp  test_rigid_transform.cpp  test_twist_contract.cpp  test_validation.cpp
localization_output_gateway/: CMakeLists.txt  package.xml
localization_output_gateway/config/: cuvslam_primary.contract.yaml  disabled.contract.yaml  mocap_primary.contract.yaml
localization_output_gateway/include/localization_output_gateway/: contract_config.hpp  gateway_node.hpp
localization_output_gateway/launch/: cuvslam_primary_output.launch.py  localization_output_gateway_disabled.launch.py  mocap_primary_output.launch.py
localization_output_gateway/src/: contract_config.cpp  gateway_node.cpp  main.cpp
localization_output_gateway/test/: test_active_pose_output.cpp  test_disabled_launch.py
localization_source_selector/: CMakeLists.txt  package.xml
localization_source_selector/config/: cuvslam_primary.contract.yaml  mocap_primary.contract.yaml
localization_source_selector/include/localization_source_selector/: contract_config.hpp  selector_node.hpp  yaw_alignment.hpp
localization_source_selector/launch/: cuvslam_primary_selector.launch.py  mocap_primary_selector.launch.py
localization_source_selector/src/: contract_config.cpp  main.cpp  selector_node.cpp  yaw_alignment.cpp
localization_source_selector/test/: test_contract_config.cpp  test_selector_authority.cpp  test_selector_lifecycle.cpp  test_selector_node_contract.cpp  test_yaw_alignment.cpp
localization_source_selector/test/fixtures/: identity_mismatch.contract.yaml  mode_mismatch.contract.yaml  unknown_key.contract.yaml
mocap_localization_adapter/: CMakeLists.txt  package.xml
mocap_localization_adapter/config/: mocap_shadow.params.yaml
mocap_localization_adapter/include/mocap_localization_adapter/: adapter_config.hpp  adapter_node.hpp  pose_transform.hpp
mocap_localization_adapter/launch/: mocap_adapter_shadow.launch.py
mocap_localization_adapter/src/: adapter_config.cpp  adapter_node.cpp  main.cpp  pose_transform.cpp
mocap_localization_adapter/test/: test_input_authority_lifecycle.cpp  test_input_authority_timeout.cpp  test_live_shadow_pipeline.cpp  test_output_authority.cpp  test_pose_transform.cpp  test_shadow_node_contract.cpp  test_source_candidate_authority.cpp
tools/: collect_host_flight_stack_baseline.sh  collect_mavros_px4_external_vision_audit.sh  collect_yopo_platform_baseline.sh  collect_yopo_runtime_baseline.sh
tools/bag_contract_probe/: CMakeLists.txt  README.md  package.xml
tools/bag_contract_probe/include/bag_contract_probe/: analyzer.hpp  statistics.hpp
tools/bag_contract_probe/src/: analyzer.cpp  audit.cpp  audit.hpp  main.cpp  statistics.cpp
tools/bag_contract_probe/test/: test_audit.cpp  test_statistics.cpp
