<?xml version="1.0"?>
<!-- Copyright (c) 2026 u5-4; SPDX-License-Identifier: Apache-2.0 -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mocap_localization_adapter</name>
  <version>0.1.0</version>
  <description>Fail-closed VRPN motion-capture pose shadow adapter.</description>
  <maintainer email="u5-4@users.noreply.github.com">u5-4</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>eigen3_cmake_module</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>diagnostic_msgs</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>localization_adapter_interfaces</depend>
  <depend>localization_contracts</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rmw</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
