<?xml version="1.0"?>
<!-- Copyright (c) 2026 u5-4; SPDX-License-Identifier: Apache-2.0 -->
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bag_contract_probe</name>
  <version>0.2.0</version>
  <description>Read-only deterministic audit of cuVSLAM and mocap shadow bags.</description>
  <maintainer email="u5-4@users.noreply.github.com">u5-4</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>isaac_ros_visual_slam_interfaces</depend>
  <depend>localization_adapter_interfaces</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml_cpp_vendor</depend>

  <exec_depend>rosbag2_storage_default_plugins</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rosbag2_storage_default_plugins</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
